--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "phpoffice/phpexcel": "^1.8",
         "symfony/property-access": "^2.7",
         "symfony/expression-language": "^2.7",
-        "egulias/email-validator": "^1.2"
+        "egulias/email-validator": "^1.2",
+        "seld/jsonlint": "^1.3",
+        "guzzlehttp/guzzle": "^6.1",
+        "besimple/soap": "^0.2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
